# may-music-box

./: Makefile  README.md  hw_desc  may-music.s  rom1053b.txt  user_vs1053.mem
arduino/: mozart_music_box.ino
arduino/may_music_box/: Adafruit_VS1053.cpp  may_music_box.ino
eagle/: May Music Box Parts.lbr  maymusicbox.brd  maymusicbox.sch
maymusicbox-esp/: CMakeLists.txt  README.md  sdkconfig
maymusicbox-esp/components/my_board/: CMakeLists.txt
maymusicbox-esp/components/my_board/my_board_v1_0/: board.c  board_def.h  board_pins_config.c
maymusicbox-esp/main/: CMakeLists.txt  audio_player.cc  audio_player.h  buttons.cc  buttons.h  led.cc  led.h  led_downmix.cc  led_downmix.h  logging.cc  logging.h  maymusicbox-esp.c  maymusicbox-esp.cc  song.h  wake.cc  wake.h
maymusicbox-esp/main/ulp/: button_wake.S
vs1053/: may-music.s  user_vs1053.mem
